--- a/444-usabillionaires/BusStop/res/layout/activity_fav_history.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_fav_history.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal" >
     <Button
         android:id="@+id/Favorites"
+        android:layout_weight="2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button_favorites"
@@ -13,7 +14,8 @@
 
     <Button
         android:id="@+id/History"
-        android:layout_width="match_parent"
+        android:layout_weight="2"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="history"
         android:text="@string/button_history" />
