--- a/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
@@ -12,4 +12,10 @@
         tools:context=".PlanTripActivity"
         android:gravity="center" />
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test Button" />
+
 </LinearLayout>
