--- a/444-usabillionaires/BusStop/res/layout/activity_fav_history.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_fav_history.xml
@@ -1,23 +1,25 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal" >
-    <Button
-        android:id="@+id/Favorites"
-        android:layout_weight="2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_favorites"
-        android:onClick="favorites" />
-
-    <Button
-        android:id="@+id/History"
-        android:layout_weight="2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="history"
-        android:text="@string/button_history" />
-
-</LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<TabHost
+    android:layout_weight="3"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost">
+    <LinearLayout
+        android:id="@+id/LinearLayout01"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+        <TabWidget
+            android:id="@android:id/tabs"
+            android:layout_height="wrap_content"
+            android:layout_width="fill_parent">
+        </TabWidget>
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent">
+        </FrameLayout>
+        
+    </LinearLayout>
+</TabHost>
