--- a/444-usabillionaires/BusStop/res/layout/activity_favorites.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_favorites.xml
@@ -1,7 +1,18 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ListView"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-</ListView>
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+ 
+  <TextView android:text="@string/favs_tab"
+            android:padding="15dip"
+            android:textSize="18dip"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+  <Button
+      android:text="@string/button_testfav"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:onClick="testFav" />"
+ 
+</LinearLayout>
