--- a/444-usabillionaires/BusStop/res/layout/activity_history.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_history.xml
@@ -1,7 +1,24 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ListView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
-
-</ListView>
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:orientation="vertical"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent">
+ 
+  <TextView android:text="@string/hist_tab"
+            android:padding="15dip"
+            android:textSize="18dip"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"/>
+  
+  <Button
+      android:text="@string/button_testhist01"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:onClick="testHist01" />
+  <Button
+      android:text="@string/button_testhist02"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:onClick="testHist02" />
+ 
+</LinearLayout>
