--- a/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
@@ -1,15 +1,39 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/text_plan_trip"
-        tools:context=".PlanTripActivity"
-        android:gravity="center" />
-
-</LinearLayout>
+ <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
+     xmlns:tools="http://schemas.android.com/tools" 
+     android:id="@+id/LinearLayout" 
+     android:layout_width="match_parent" 
+     android:layout_height="match_parent" 
+     android:clickable="true" 
+     android:gravity="bottom|top" 
+     android:orientation="vertical">
+     
+  <TextView android:id="@+id/textView1" 
+      android:layout_width="match_parent" 
+      android:layout_height="wrap_content" 
+      android:onClick="@string/title_activity_plan_trip" 
+      android:text="@string/text_select_dest" />
+   
+  <ListView android:id="@+id/listView1" 
+      android:layout_width="match_parent" 
+      android:layout_height="0dp" 
+      android:layout_weight="0.89" /> 
+      
+  <Button android:id="@+id/button_add_dest" 
+      android:layout_width="match_parent" 
+      android:layout_height="wrap_content" 
+      android:onClick="@string/title_activity_plan_trip" 
+      android:text="@string/text_another_dest" /> 
+      
+  <Button android:id="@+id/button_finish_trip" 
+      android:layout_width="match_parent" 
+      android:layout_height="wrap_content" 
+      android:onClick="@string/title_activity_main" 
+      android:text="@string/text_finish_trip" /> 
+      
+  <Button android:id="@+id/button_save_to_favs" 
+      android:layout_width="match_parent" 
+      android:layout_height="wrap_content" 
+      android:clickable="false" 
+      android:text="@string/text_save_to_favs" />
+   
+  </LinearLayout>
