--- a/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
@@ -2,38 +2,73 @@
      xmlns:tools="http://schemas.android.com/tools" 
      android:id="@+id/LinearLayout" 
      android:layout_width="match_parent" 
-     android:layout_height="match_parent" 
+     android:layout_height="fill_parent" 
      android:clickable="true" 
      android:gravity="bottom|top" 
      android:orientation="vertical">
      
-  <TextView android:id="@+id/textView1" 
+ <LinearLayout 
+	android:layout_height="wrap_content" 
+	android:layout_width="fill_parent" 
+	android:orientation="horizontal">
+	
+  <RadioButton 
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content" 
+      android:text="@string/plan_trip_fav" /> 
+      
+  <EditText 
+      android:layout_weight="3" 
+      android:layout_width="0dp" 
+      android:layout_height="wrap_content" 
+      android:text="@string/edit_text_trip_name" /> 
+      
+  <Button 
+      android:layout_width="wrap_content" 
+      android:layout_height="wrap_content" 
+      android:text="@string/plan_trip_clear" /> 
+      
+  </LinearLayout>
+  
+  <TextView 
       android:layout_width="match_parent" 
       android:layout_height="wrap_content" 
-      android:onClick="@string/title_activity_plan_trip" 
-      android:text="@string/text_select_dest" />
+      android:text="@string/plan_trip_current_trip_list" /> 
+      
+  <ScrollView 
+      android:layout_width="match_parent" 
+      android:layout_height="100dp" /> 
+      
+  <TextView 
+      android:layout_width="fill_parent" 
+      android:layout_height="wrap_content" 
+      android:text="@string/plan_trip_destination" />
    
-  <ListView android:id="@+id/listView1" 
-      android:layout_width="match_parent" 
-      android:layout_height="0dp" 
-      android:layout_weight="0.89" /> 
-      
-  <Button android:id="@+id/button_add_dest" 
-      android:layout_width="match_parent" 
-      android:layout_height="wrap_content" 
-      android:onClick="@string/title_activity_plan_trip" 
-      android:text="@string/text_another_dest" /> 
-      
-  <Button android:id="@+id/button_finish_trip" 
-      android:layout_width="match_parent" 
-      android:layout_height="wrap_content" 
-      android:onClick="@string/title_activity_main" 
-      android:text="@string/text_finish_trip" /> 
-      
-  <Button android:id="@+id/button_save_to_favs" 
-      android:layout_width="match_parent" 
-      android:layout_height="wrap_content" 
-      android:clickable="false" 
-      android:text="@string/text_save_to_favs" />
+  <Button 
+      android:layout_width="fill_parent" 
+      android:layout_height="50dp" 
+      android:text="@string/button_testfav" 
+      android:onClick="selectDestination" />
    
+  <Button 
+      android:layout_width="fill_parent" 
+      android:layout_height="50dp" 
+      android:text="@string/button_testhist01" 
+      android:onClick="selectDestination" />
+   
+  <Button 
+      android:layout_width="fill_parent" 
+      android:layout_height="50dp" 
+      android:text="@string/button_testhist02" 
+      android:onClick="selectDestination" /> 
+      
+  <TextView 
+      android:layout_width="fill_parent" 
+      android:layout_height="50dp" /> 
+      
+  <Button 
+      android:layout_width="fill_parent" 
+      android:layout_height="50dp" 
+      android:text="@string/finish_planning_trip" 
+      android:onClick="finishTrip" /> 
   </LinearLayout>
