finished both the plan trip and fav/hist views
not hooked up to back end yet

--- a/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
@@ -38,7 +38,14 @@
 	  <ScrollView
 	      android:id="@+id/plan_trip_scrollview"
 	      android:layout_width="match_parent" 
-	      android:layout_height="100dp" /> 
+	      android:layout_height="100dp">
+	      
+	      <LinearLayout
+	          android:id="@+id/scroll_layout"
+	          android:orientation="vertical"
+	          android:layout_width="match_parent"
+	          android:layout_height="wrap_content" /> 
+	  </ScrollView>
 	      
 	  <TextView 
 	      android:layout_width="fill_parent" 
