--- a/444-usabillionaires/BusStop/res/layout/activity_reuse_trip.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_reuse_trip.xml
@@ -6,6 +6,12 @@
     android:orientation="vertical"
     android:gravity="bottom" >
     
+    <TextView 
+        android:id="@+id/text_reuse"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3"/>
+    
     <Button 
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"
