--- a/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
+++ b/444-usabillionaires/BusStop/res/layout/activity_plan_trip.xml
@@ -5,12 +5,16 @@
      android:layout_height="fill_parent" 
      android:clickable="true" 
      android:gravity="bottom|top" 
-     android:orientation="vertical">
+     android:orientation="vertical"
+     android:descendantFocusability="beforeDescendants"
+     android:focusableInTouchMode="true">
      
 	<LinearLayout 
 		android:layout_height="wrap_content" 
 		android:layout_width="fill_parent" 
-		android:orientation="horizontal">
+		android:orientation="horizontal"
+		android:descendantFocusability="beforeDescendants"
+		android:focusableInTouchMode="true">
 		
 	  <RadioButton 
 	      android:layout_width="wrap_content" 
@@ -21,7 +25,9 @@
 	      android:layout_weight="3" 
 	      android:layout_width="0dp" 
 	      android:layout_height="wrap_content" 
-	      android:text="@string/edit_text_trip_name" /> 
+	      android:text="@string/edit_text_trip_name"
+	      android:descendantFocusability="beforeDescendants"
+	      android:focusableInTouchMode="true"/> 
 	      
 	  <Button 
 	      android:layout_width="wrap_content" 
